--- a/supervisord.conf
+++ b/supervisord.conf
@@ -26,7 +26,7 @@ stderr_logfile=/var/log/xvfb.err
 priority=10
 directory=/
 command=x11vnc -display :1 -xkb
-#command=x11vnc -display :1 -listen localhost -xkb
+command=x11vnc -display :1 -listen localhost -xkb
 autostart=true
 autorestart=true
 stopsignal=QUIT
